--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,104 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+  font-family: Arial, sans-serif;
+}
+
+input {
+  padding: 10px;
+  margin: 10px 0;
+  width: 300px;
+  border: 2px solid #333;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+label {
+  margin: 10px 0;
+  font-size: 16px;
+
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #af4c4c;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+button:disabled {
+  background-color: #ddd;
+  cursor: not-allowed;
+}
+
+button:hover:not(:disabled) {
+  background-color: #1ba0c1;
+}
+
+/* Fade-in qr code animation */
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+/* qr code container to apply animation */
+
+.qr-code-container {
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  background-color: #331aa0;
+  border-radius: 10px;
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+}
+
+.color-picker-container {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.color-picker-container h2 {
+  margin: 0;
+  margin-right: 10px;
+}
+
+.color-picker {
+  cursor: pointer;
+}
+
+/* background color around the qr code
+
+.qr-code {
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  background-color: #331aa0;
+  border-radius: 10px;
+}
+
+*/
